fixing hover effect on mobile

--- a/assets/styles/_historyWindow.scss
+++ b/assets/styles/_historyWindow.scss
@@ -91,7 +91,6 @@
 
 .tooltip {
     position: absolute;
-    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -115,6 +114,14 @@
     p{
         margin-bottom: 7px;
     }
+}
+
+.ttp-display-none{
+    display: none;
+}
+
+.ttp-display-flex{
+    display: flex;
 }
     
 .not-achieved{
